[package]
name = "i3ref"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Astro Orbis <astroorbis@gmail.com>"]
description = "A command-line reference viewer for i3wm."
homepage = "https://astroorbis.com"
repository = "https://github.com/astroorbis/i3ref"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["env", "cargo"] }
inquire = "0.6.2"
maplit = "1.0.2"
webbrowser = "0.8.10"

[[bin]]
name = "i3ref"
path = "src/main.rs"